--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>My webpage</title>
   </head>
   <body>
-    My World is awesome!
+<table>
+    This is a lecture 1
+</table>
 </body>
 </html>
