--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,7 @@
   </head>
   <body>
 <table>
-    This is a lecture 1
-    Here is the new feature
-</table>
+    Hello World!
+\</table>
 </body>
 </html>
