--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
   <body>
 <table>
     This is a lecture 1
-    Here is the new feature
+    Here is the new feature line
 </table>
 </body>
 </html>
